name:                levenshtein
version:             0.1.0.0
synopsis:            Calculate the edit distance between two foldables.
-- description:
homepage:            https://github.com/hapytex/levenshtein#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexteu+gh@gmail.com
copyright:           2021 Willem Van Onsem
category:            tools
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Data.Foldable.Levenshtein
  build-depends:
      base >= 4.7 && < 5
    , hashable >=1.2.7.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hapytex/levenshtein
